name:          unpacked-map
category:      Language
version:       0
license:       BSD2
license-file:  LICENSE
cabal-version: 2
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/unpacked-containers/
bug-reports:   http://github.com/ekmett/unpacked-containers/issues
copyright:     Copyright (C) 2017-2018 Edward A. Kmett
build-type:    Simple
synopsis:      Unpacked maps via backpack
description:   This backpack mixin package supplies unpacked maps exploiting backpack's ability to unpack through signatures.
extra-source-files:
  include/containers.h

source-repository head
  type: git
  location: git://github.com/ekmett/unpacked-containers.git

-- separate internal library to avoid recompiling these all the time
library utils
  default-language: Haskell2010
  hs-source-dirs: utils
  include-dirs: include
  ghc-options: -Wall -O2
  build-depends:
    base >= 4.10 && < 5,
    deepseq >= 1.2 && < 1.5,
    ghc-prim
  exposed-modules:
    Internal.BitUtil
    Internal.BitQueue
    Internal.StrictPair 
    Internal.State
    Internal.StrictFold
    Internal.StrictMaybe
    Internal.PtrEquality 

library
  default-language: Haskell2010
  ghc-options: -Wall -O2
  hs-source-dirs: src
  signatures: Key
  exposed-modules: Map.Internal
  build-depends:
    base >= 4.10 && < 5,
    data-default-class ^>= 0.1,
    deepseq ^>= 1.4,
    unpacked-set ^>= 0,
    utils
