name:          unpacked-set
category:      Language
version:       0
license:       BSD2
license-file:  LICENSE
cabal-version: 2
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/unpacked-containers/
bug-reports:   http://github.com/ekmett/unpacked-containers/issues
copyright:     Copyright (C) 2017-2018 Edward A. Kmett
build-type:    Simple
synopsis:      Unpacked sets via backpack
description:   This backpack mixin package supplies unpacked sets exploiting backpack's ability to unpack through signatures.

source-repository head
  type: git
  location: git://github.com/ekmett/unpacked-containers.git

library
  default-language: Haskell2010
  ghc-options: -Wall -O2
  hs-source-dirs: src
  signatures: Key
  exposed-modules: Set Set.Internal
  build-depends:
    base >= 4.10 && < 5,
    data-default-class ^>= 0.1,
    deepseq ^>= 1.4

library example
  hs-source-dirs: example
  exposed-modules: Int
  build-depends: base

executable unpacked-set-example
  default-language: Haskell2010
  main-is: example/Main.hs
  build-depends: base, unpacked-set, example
  mixins: unpacked-set (Set as Int.Set) requires (Key as Int)
