name:          unpacked-unordered-containers
category:      Language
version:       0
license:       BSD2
license-file:  LICENSE
cabal-version: 2.0
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/unpacked-containers/
bug-reports:   http://github.com/ekmett/unpacked-containers/issues
copyright:     Copyright (C) 2018 Edward A. Kmett
build-type:    Simple
synopsis:      Unpacked unordered containers via backpack
description:   This backpack mixin package supplies unpacked unordered sets and maps exploiting backpack's ability to unpack through signatures.
extra-source-files:
  README.md
  CHANGELOG.md
  LICENSE

source-repository head
  type: git
  location: git://github.com/ekmett/unpacked-containers.git

library
  default-language: Haskell2010
  ghc-options: -Wall -O2
  hs-source-dirs: src
  signatures:
    Key

  exposed-modules:
    HashMap.Base
    HashMap.Lazy
    HashMap.Strict
    HashSet

  build-depends:
    base >= 4.10 && < 5,
    data-default-class ^>= 0.1,
    deepseq ^>= 1.4,
    hashable ^>= 1.2.7,
    ghc-prim,
    utils

-- separate internal library to avoid recompiling these all the time
library utils
  default-language: Haskell2010
  hs-source-dirs: utils
  ghc-options: -Wall -O2

  build-depends:
    base >= 4.10 && < 5,
    deepseq ^>= 1.4,
    ghc-prim

  exposed-modules:
    Internal.Array
    Internal.List
    Internal.UnsafeShift
